2008-09-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Add
	use of bsp_get_work_area() in its own file and rely on BSP Framework
	to perform more initialization. Remove unnecessary includes of
	rtems/libio.h and rtems/libcsupport.h.

2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Review of all bsp_cleanup() implementations. In this
	phase, all prototypes were removed from bsp.h and empty
	implementations were removed and made to use the shared stub.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-05-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Eliminate copies of switches to convert termios
	Bxxx constants to xxx as an integer. Use the shared
	termios_baud_to_number() routine to do the same conversion.

2008-05-19	Eric Norum <norume@aps.anl.gov>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Back
	out changes from 2008-05-16 -- they don't seem to work.

2008-05-16	Eric Norum <norume@aps.anl.gov>

	* Makefile.am, configure.ac, startup/bspstart.c, startup/linkcmds: Use
	shared version of bootstrap to set up workspace.

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework