@@ -17,9 +17,9 @@
 /*
  * Declare some locations and sizes.
  */
-_RamBase = DEFINED(_RamBase) ? _RamBase : 0x0;
-_RamSize = DEFINED(_RamSize) ? _RamSize : 16M;
-_HeapSize = DEFINED(_HeapSize) ? _HeapSize : 0;
+RamBase = DEFINED(RamBase) ? RamBase : 0x0;
+RamSize = DEFINED(RamSize) ? RamSize : 16M;
+HeapSize = DEFINED(HeapSize) ? HeapSize : 0;
 _FlashBase = DEFINED(_FlashBase) ? _FlashBase : 0x10000000;
 _FlashSize = DEFINED(_FlashSize) ? _FlashSize : 4M ;
 
@@ -166,7 +166,7 @@ SECTIONS
         . = ALIGN (16);
         PROVIDE (end = .);
         _clear_end = .;
-        _WorkspaceBase = .;
+        WorkAreaBase = .;
     } >ram
 
   /* Stabs debugging sections.  */
